--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
@@ -13,9 +14,17 @@ Delete the line below if you're just getting started and want to remove the welc
 
 {% block content %}
 
-{% comment %}
-Delete the line below if you're just getting started and want to remove the welcome screen!
-{% endcomment %}
-{% include 'home/welcome_page.html' %}
+<div>
+    <h1>{{ page.title }}</h1>
+    {% image page.image fill-480x320 %}
+    <p>{{ page.hero_text }}</p>
+    {% if page.hero_cta_link %}
+    <a href="{% pageurl page.hero_cta_link %}">
+        {% firstof page.hero_cta page.hero_cta_link.title %}
+    </a>
+    {% endif %}
+</div>
+
+{{ page.body|richtext }}
 
 {% endblock content %}
