config: Initialize & configure tailwindcss

--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -24,7 +24,7 @@
         {% endif %}
 
         {# Global stylesheets #}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/brazil_blog.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/brazil_blog_compiled.css' %}">
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
