style: Style homepage

--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -33,6 +33,8 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
+
+        {% include "includes/header.html" %}
     
         {% block content %}{% endblock %}
     
