--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -14,21 +14,26 @@ Delete the line below if you're just getting started and want to remove the welc
 
 {% block content %}
 
-<div>
-    <h1 class="bold text-4xl mt-8 mb-4">
-        {{ page.title }}
-    </h1>
-    {% image page.image fill-480x320 %}
-    <p>{{ page.hero_text }}</p>
-    {% if page.hero_cta_link %}
-    <a href="{% pageurl page.hero_cta_link %}">
-        {% firstof page.hero_cta page.hero_cta_link.title %}
-    </a>
-    {% endif %}
+<div class="bg-green-700 py-8">
+    <div class="max-w-3xl md:max-w-5xl mx-auto bg-white rounded-xl relative overflow-hidden drop-shadow">
+        {% picture page.image format-{webp,avif,jpeg} fill-1024x320 bgcolor-3730a3 %}
+        <div class="h-80 absolute top-0 p-4 w-full flex items-end bg-gradient-to-t to-transparent from-black">
+            <h1 class="bold text-4xl mt-8 mb-4 text-white drop-shadow">
+                {{ page.title }}
+            </h1>
+        </div>
+        <p>{{ page.hero_text }}</p>
+        {% if page.hero_cta_link %}
+        <a href="{% pageurl page.hero_cta_link %}">
+            {% firstof page.hero_cta page.hero_cta_link.title %}
+        </a>
+        {% endif %}
+
+        <article class="prose p-4">
+            {{ page.body|richtext }}
+        </article>
+    </div>
 </div>
 
-<article class="prose">
-    {{ page.body|richtext }}
-</article>
 
 {% endblock content %}
