feat: Add site menu

--- a/src/brazil_blog/templates/includes/footer.html
+++ b/src/brazil_blog/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-indigo-700 text-white">
+<footer class="bg-blue-800 text-white">
     <div class="max-w-3xl md:max-w-5xl px-4 py-4 mx-auto">
         <p>Built with Wagtail</p>
     </div>
