--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -36,7 +36,7 @@ Delete the line below if you're just getting started and want to remove the welc
             </a>
             {% endif %}
 
-            <article class="prose p-4">
+            <article class="prose w-full max-w-none p-4">
                 {{ page.body|richtext }}
             </article>
         </div>
