--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -9,7 +9,9 @@
                 <a href="{% pageurl site_root %}" class="inline-block">
                     {% picture site_logo format-{webp,avif,jpeg} fill-64x64 bgcolor-3730a3 class="inline-block rounded-full" %}
                 </a>
-                <h1 class="text-3xl font-bold">{{ site_name }}</h1>
+                <a href="/" class="text-black hover:text-black no-underline hover:underline decoration-4 underline-offset-4 decoration-wavy">
+                    <h1 class="text-3xl font-bold">{{ site_name }}</h1>
+                </a>
             </div>
             <ul class="flex items-center gap-3">
                 {% for menuitem in site_root.get_children.live.in_menu %}
