--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -14,7 +14,7 @@ Delete the line below if you're just getting started and want to remove the welc
 
 {% block content %}
 
-<div class="bg-green-700 py-8">
+<div class="bg-green-700 py-8 flex-grow">
     <div class="max-w-3xl md:max-w-5xl mx-auto p-4">
         <div class="bg-white rounded-xl overflow-hidden drop-shadow">
             <div class="relative aspect-w-16 aspect-h-4">
