--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -31,7 +31,7 @@
         {% endblock %}
     </head>
 
-    <body class="{% block body_class %}{% endblock %}">
+    <body class="{% block body_class %}{% endblock %} flex flex-col">
         {% wagtailuserbar %}
 
         {% include "includes/header.html" %}
