--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -22,23 +22,33 @@
                     </li>
                 {% endfor %}
             </ul>
-            <ul class="list-none pl-0 mt-0 flex flex-row gap-3">
-                {% if user.is_authenticated %}
-                    <li class="pl-0">
-                        <a class="text-blue-800 hover:text-white transition-colors" href="{% url 'account_email' %}">{% trans "Change Email" %}</a>
-                    </li>
-                    <li class="pl-0">
-                        <a class="text-blue-800 hover:text-white transition-colors" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
-                    </li>
-                {% else %}
-                    <li class="pl-0">
-                        <a class="text-blue-800 hover:text-white transition-colors" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
-                    </li>
-                    <li class="pl-0">
-                        <a class="text-blue-800 hover:text-white transition-colors" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
-                    </li>
-                {% endif %}
-            </ul>
+            <div class="group relative z-10">
+                <div class="rounded-full bg-blue-800 text-white w-12 h-12 flex items-center justify-center relative z-10 cursor-pointer">
+                    {% if user.is_authenticated %}
+                        <span>{{ user.username|first|upper }}</span>
+                    {% else %}
+                        <span>?</span>
+                    {% endif %}
+                </div>
+
+                <ul class="list-none pl-0 mt-0 absolute -top-2 -right-2 w-48 z-0 pt-2 pb-5 bg-white rounded-3xl block opacity-0 pointer-events-none group-hover:opacity-100 group-hover:pointer-events-auto group-hover:drop-shadow transition">
+                    {% if user.is_authenticated %}
+                        <li class="pl-4 mt-2">
+                            <a class="text-blue-800 hover:text-blue-900 transition-colors" href="{% url 'account_email' %}">{% trans "Change Email" %}</a>
+                        </li>
+                        <li class="pl-4 mt-2">
+                            <a class="text-blue-800 hover:text-blue-900 transition-colors" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+                        </li>
+                    {% else %}
+                        <li class="pl-4 mt-2">
+                            <a class="text-blue-800 hover:text-blue-900 transition-colors" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
+                        </li>
+                        <li class="pl-4 mt-2">
+                            <a class="text-blue-800 hover:text-blue-900 transition-colors" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
     </header>
 {% endwith %}
