--- a/src/brazil_blog/templates/includes/footer.html
+++ b/src/brazil_blog/templates/includes/footer.html
@@ -1,5 +1,8 @@
+{% load cache %}
+{% cache 500 footer %}
 <footer class="bg-blue-800 text-white">
     <div class="max-w-3xl md:max-w-5xl px-4 py-4 mx-auto">
         <p>Built with Wagtail</p>
     </div>
 </footer>
+{% endcache %}
