feat: Update API endpoint for fetching comments in comments.html by using the correct "post" query url parameter

--- a/src/blog/templates/blog/includes/comments.html
+++ b/src/blog/templates/blog/includes/comments.html
@@ -39,7 +39,7 @@
 
 <script type="text/javascript">
     function fetchComments() {
-        return fetch("/blog/api/comments/?page_id={{ page.id }}").then(
+        return fetch("/blog/api/comments/?post={{ page.id }}").then(
             (response) => response.json(),
         );
     }
