--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -47,5 +47,38 @@
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
         {% endblock %}
+
+        <script type="text/javascript">
+            // Lazy load images
+            document.addEventListener("DOMContentLoaded", function() {
+                var lazyloadImages = document.querySelectorAll("img.lazyload");
+                var lazyloadThrottleTimeout;
+                function lazyload () {
+                    if(lazyloadThrottleTimeout) {
+                        clearTimeout(lazyloadThrottleTimeout);
+                    }
+                    lazyloadThrottleTimeout = setTimeout(function() {
+                        var scrollTop = window.pageYOffset;
+                        lazyloadImages.forEach(function(img) {
+                            if(img.offsetTop < (window.innerHeight + scrollTop)) {
+                                img.src = img.dataset.src;                                
+                                img.onload = function() {
+                                    img.classList.remove('lazyload', 'blur', 'scale-105');
+                                };
+                            }
+                        });
+                        if(lazyloadImages.length == 0) {
+                            document.removeEventListener("scroll", lazyload);
+                            window.removeEventListener("resize", lazyload);
+                            window.removeEventListener("orientationChange", lazyload);
+                        }
+                    }, 20);
+                }
+                document.addEventListener("scroll", lazyload);
+                window.addEventListener("resize", lazyload);
+                window.addEventListener("orientationChange", lazyload);
+                lazyload();
+            });
+        </script>
     </body>
 </html>
