feat: Update default image format to webp in custom_image_tags.py
Update the default image format in the `custom_image_tags.py` file to `webp` instead of `jpeg`. This change will ensure that the advanced_image filter generates image renditions in the webp format by default.

```

--- a/src/brazil_blog/templates/base.html
+++ b/src/brazil_blog/templates/base.html
@@ -60,6 +60,11 @@
                     lazyloadThrottleTimeout = setTimeout(function() {
                         var scrollTop = window.pageYOffset;
                         lazyloadImages.forEach(function(img) {
+
+                            if (!img.classList.contains('lazyload')) {
+                                return;
+                            }
+
                             if(img.offsetTop < (window.innerHeight + scrollTop)) {
                                 img.src = img.dataset.src;                                
                                 img.onload = function() {
