--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -14,11 +14,10 @@
             <a href="{% pageurl post %}" class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
                 <div class="relative aspect-square">
                     {% if post.specific.image %}
-                        <!-- {% picture post.specific.image format-{webp,avif,jpeg} fill-512x512 bgcolor-3730a3 %} -->
                         <img 
-                            src="{{ post.specific.image|advanced_image:'fill-512x512,bgcolor-eab308' }}"
+                            src="{{ post.specific.image|advanced_image:'fill-64x64,format-jpeg,bgcolor-eab308' }}"
                             data-src="{{ post.specific.image|advanced_image:'fill-512x512,quality-90' }}"
-                            class="lazyload blur w-full h-full object-cover object-center transition bg-yellow-500 scale-105"
+                            class="lazyload blur w-full h-full object-cover object-center transition bg-yellow-500 scale-105 duration-150"
                             alt="{{ post.specific.image.alt }}"
                         />
                     {% else %}
